versioned_docs/version-2.9/reference/targets/jvm_artifact.mdx
---
title: jvm_artifact
# The old-style `code...code` anchors are heading level 6, and shouldn't be visible in ToC
toc_max_heading_level: 5
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A third-party JVM artifact, as identified by its Maven-compatible coordinate.

That is, an artifact identified by its `group`, `artifact`, and `version` components.

Each artifact is associated with one or more resolves (a logical name you give to a lockfile). For this artifact to be used by your first-party code, it must be associated with the resolve(s) used by that code. See the `compatible_resolves` field.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codetagscode}
</div>

## `tags`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codedescriptioncode}
</div>

## `description`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codegroupcode}
</div>

## `group`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The &#x27;group&#x27; part of a Maven-compatible coordinate to a third-party JAR artifact.

For the JAR coordinate `com.google.guava:guava:30.1.1-jre`, the group is `com.google.guava`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeartifactcode}
</div>

## `artifact`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The &#x27;artifact&#x27; part of a Maven-compatible coordinate to a third-party JAR artifact.

For the JAR coordinate `com.google.guava:guava:30.1.1-jre`, the artifact is `guava`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeversioncode}
</div>

## `version`

<Field
    type_repr={`str`}
    default_repr={`None`}
>

The &#x27;version&#x27; part of a Maven-compatible coordinate to a third-party JAR artifact.

For the JAR coordinate `com.google.guava:guava:30.1.1-jre`, the version is `30.1.1-jre`.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codepackagescode}
</div>

## `packages`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The JVM packages this artifact provides for the purposes of dependency inference.

For example, the JVM artifact `junit:junit` might provide `["org.junit.**"]`.

Usually you can leave this field off. If unspecified, Pants will fall back to the `[java-infer].third_party_import_mapping`, then to a built in mapping (https://github.com/pantsbuild/pants/blob/release_2.9.2/src/python/pants/jvm/dependency_inference/jvm_artifact_mappings.py), and then finally it will default to the normalized `group` of the artifact. For example, in the absence of any other mapping the artifact `io.confluent:common-config` would default to providing `["io.confluent.**"]`.

The package path may be made recursive to match symbols in subpackages by adding `.**` to the end of the package path. For example, specify `["org.junit.**"]` to infer a dependency on the artifact for any file importing a symbol from `org.junit` or its subpackages.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codeurlcode}
</div>

## `url`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A URL that points to the location of this artifact.

If specified, Pants will not fetch this artifact from default Maven repositories, and will instead fetch the artifact from this URL. To use default maven repositories, do not set this value.

Note that `file:` URLs are not supported. Instead, use the `jar` field for local artifacts.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codejarcode}
</div>

## `jar`

<Field
    type_repr={`str | None`}
    default_repr={`None`}
>

A local JAR file that provides this artifact to the lockfile resolver, instead of a Maven repository.

Path is relative to the BUILD file.

Use the `url` field for remote artifacts.

</Field>

<div aria-hidden="true" style={ { visibility: 'hidden', height: 0 } }>
###### {#codecompatible_resolvescode}
</div>

## `compatible_resolves`

<Field
    type_repr={`Iterable[str] | None`}
    default_repr={`None`}
>

The resolves that this artifact should be included in.

If not defined, will default to `[jvm].default_resolve`.

Each name must be defined as a resolve in `[jvm].resolves`.

When generating a lockfile for a particular resolve via the `coursier-resolve` goal, it will include all artifacts that are declared compatible with that resolve. First-party targets like `java_source` and `scala_source` then declare which resolve(s) they use via the `resolve` and `compatible_resolves` field; so, for your first-party code to use a particular `jvm_artifact` target, that artifact must be included in the resolve(s) used by that code.

</Field>

</span>
